* Bug#7503 Ignore fees when calculating the average premium rate for options

Version 1.14 - 2017-11-09
* BUG#4847 Only display "Show Loan Average Premium" action on loan contracts
* BUG#6646 Use decimal number of years instead of integer for apr calculation

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Module creation